Cleanups on the post

--- a/_posts/2017-03-07-charts.md
+++ b/_posts/2017-03-07-charts.md
@@ -22,7 +22,11 @@ These images are from pyRevit output. Run the `pyRevit > Labs > Test Charts` too
 
 ## Creating Graphs in pyRevit
 
+&nbsp;
+
 > This is an experimental feature and the API is subject to change so don't deploy it at full scale yet. To get you started playing with charts, here is how you can currently use them...
+
+&nbsp;
 
 **Step 1:** Create a chart object for the chart type that you want. We'll add data to this later...
 
@@ -138,6 +142,7 @@ chart.randomize_colors()
 chart.draw()
 ```
 
+&nbsp;
 
 ### Charts engine:
 Here is a little info on how the charts engine work:
