Added install note to blog post

--- a/_posts/2017-12-31-45final.md
+++ b/_posts/2017-12-31-45final.md
@@ -25,6 +25,12 @@ I have also moved a few pages from pyRevit blog to the new documentation. The up
 
 The next couple of videos will be on updated pyRevit features e.g. charts, logging, controlling output window. Stay tuned.
 
+### Installation:
+
+**I'd highly suggest removing all previous pyRevit versions and installing a fresh v4.5**
+
+But, if you decided to use the `upgrade.bat` tool to upgrade the v4.4 installation in-place, please make sure to run the `install_addin.bat` script after the upgrade to correct the addin manifest file with the new location of the `pyRevitLoader.dll`
+
 ### Third-party Extensions:
 
 pyRevit third-party extension still need to be updated so stay tuned until the developers update those for v4.5 and I'll add them back ASAP.
