--- a/_posts/2018-09-18-issue375.md
+++ b/_posts/2018-09-18-issue375.md
@@ -8,7 +8,7 @@ comments: true
 
 ## Fixed [Issue #375](https://github.com/eirannejad/pyRevit/issues/375)
 
-Re to [issue #375](https://github.com/eirannejad/pyRevit/issues/375), I have revised the sheet range dividers for **Batch Sheet Maker** tool to Double-Hyphen `--` and Double-Color `::` instead of single ones. This effectively removes the conflict with single hyphen or colon used in sheet numbering (Until someone thinks that using doubles is cool in sheet numbering then we're in trouble again! :rolling-eyes:)
+Re to [issue #375](https://github.com/eirannejad/pyRevit/issues/375), I have revised the sheet range dividers for **Batch Sheet Maker** tool to Double-Hyphen `--` and Double-Colon `::` instead of single ones. This effectively removes the conflict with single hyphen or colon used in sheet numbering (Until someone thinks that using doubles is cool in sheet numbering then we're in trouble again! :rolling-eyes:)
 
 So from now on, these are valid single and ranges:
 
@@ -28,3 +28,5 @@ Hope this helps :)
 Thanks for your continuous support and error reporting. Updating are on the way btw. I'm working on a super cool cli tool for pyrevit that makes your life easier.
 
 Stay tuned.
+
+* Updated: Corrected Double-Color to Double-Colon
