--- a/_posts/2019-02-16-47beta.md
+++ b/_posts/2019-02-16-47beta.md
@@ -21,7 +21,5 @@ Watch the video below for an introduction to the new features.
 &nbsp;
 
 <div style='position: relative; width: 100%; height: 0px; padding-bottom: 60%;'>
-<iframe style='position: absolute; left: 0px; top: 0px; width: 100%; height: 100%' src="https://www.youtube.com/embed/jU16j99JRtc" frameborder="0" allowfullscreen></iframe>
+<iframe style='position: absolute; left: 0px; top: 0px; width: 100%; height: 100%' src="https://www.youtube.com/embed/PbdhVJRfca0" frameborder="0" allowfullscreen></iframe>
 </div>
-
-&nbsp;
