A few fixes and added links to 4.6.16 post

--- a/_posts/2019-02-25-4616.md
+++ b/_posts/2019-02-25-4616.md
@@ -13,7 +13,7 @@ comments: true
 
 This version includes a few improvements to the Keynote Manager.
 
-- Unused keynotes are not shown as gray (users rightfully commented that they look like they are disabled). Used keynotes are shown with darker font now.
+- Unused keynotes are not shown as gray (users rightfully commented that they look like they are disabled. [See conversation here](https://github.com/eirannejad/pyRevit/issues/529)). Instead, used keynotes are shown with darker font now.
 
 &nbsp;
 
@@ -21,7 +21,7 @@ This version includes a few improvements to the Keynote Manager.
 
 &nbsp;
 
-- The filter button now includes an option for filtering keynotes using Regular Expressions
+- The filter button now includes an option for filtering keynotes using [Regular Expressions](https://regexr.com)
 
 &nbsp;
 
