--- a/_posts/2019-03-18-46final.md
+++ b/_posts/2019-03-18-46final.md
@@ -4,6 +4,7 @@ title:  "Retiring pyRevit 4.6"
 date:   2019-03-18 8:00:00 -0800
 categories: pyrevit updates
 comments: true
+image: /apple-touch-icon-180x180.png
 ---
 
 Hello everyone,
