--- a/_posts/2019-05-20-4622.md
+++ b/_posts/2019-05-20-4622.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "pyRevit 4.6.22 (CLI 0.10.0)"
+title:  "pyRevit 4.6.22"
 date:   2019-05-20 8:00:00 -0800
 categories: pyrevit updates
 comments: true
